--- a/01_Programacion_basica_y_Ramp-Up/Simulacros Rampup/simulacro_sabado.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Simulacros Rampup/simulacro_sabado.ipynb
@@ -10,24 +10,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Escribe tu nombre y apellidos (apellido si solo tienes uno) en las variables:\n",
-    "nombre = \"\"\n",
-    "apellidos = \"\""
+    "nombre = \"María\"\n",
+    "apellidos = \"Sanabria Vals\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bienvenida María Sanabria Vals. Mucha suerte!\n"
+     ]
+    }
+   ],
    "source": [
     "# Solo ejecutar\n",
     "nombre_apellidos = nombre + ' ' + apellidos\n",
-    "print(\"Bienvenido\", nombre_apellidos + '. Mucha suerte!')"
+    "print(\"Bienvenida\", nombre_apellidos + '. Mucha suerte!')"
    ]
   },
   {
@@ -53,10 +61,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Muy buenas nos dé Dios, Lunita\n",
+      "No se puede dividir por 0\n"
+     ]
+    }
+   ],
    "source": [
+    "nombre = input(\"Dime tu nombre\")\n",
+    "print(f\"Muy buenas nos dé Dios, {nombre}\")\n",
+    "peticion = input(\"¿Quieres sumar, restar, multiplicar o dividir?\")\n",
+    "peticion = peticion.lower()\n",
+    "peticion_num_1 = float(input(\"Si quieres que haga eso, dame un número\"))\n",
+    "peticion_num_2 = float(input(\"Ahora dame otro número\"))\n",
+    "if peticion == \"sumar\":\n",
+    "    print(peticion_num_1 + peticion_num_2)\n",
+    "elif peticion == \"restar\":\n",
+    "     print(peticion_num_1 - peticion_num_2)\n",
+    "elif peticion == \"multiplicar\":\n",
+    "      print(peticion_num_1 * peticion_num_2)\n",
+    "elif peticion == \"dividir\":\n",
+    "    try:\n",
+    "        resultado= peticion_num_1 / peticion_num_2\n",
+    "    except ZeroDivisionError:\n",
+    "         print(\"No se puede dividir por 0\")\n",
+    "else: \n",
+    "     print(\"Disculpe, no le he entendido, ¿ha dicho que quiere sumar, restar, multiplicar o dividir?\")\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -73,11 +112,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Muy buenas nos dé Dios, Maria\n",
+      "3.3333333333333335\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "\n",
+    "nombre = input(\"Dime tu nombre\")\n",
+    "print(f\"Muy buenas nos dé Dios, {nombre}\")\n",
+    "peticion = input(\"¿Quieres sumar, restar, multiplicar, dividir o salir?\")\n",
+    "peticion = peticion.lower()\n",
+    "peticion_valores = (input(\"Si quieres que haga eso, dame los números que quieras separados por comas\"))\n",
+    "peticion_valores_str = peticion_valores.split(',')\n",
+    "numeros = []\n",
+    "for numero_str in peticion_valores_str:\n",
+    "    try:\n",
+    "        numero = float(numero_str)\n",
+    "        numeros.append(numero)\n",
+    "    except ValueError:\n",
+    "        print(f\"Error: '{numero_str}' no es un número válido.\")\n",
+    "if peticion == \"salir\":\n",
+    "    print(\"¡Nos vemos pronto!\")\n",
+    "elif peticion == \"sumar\":\n",
+    "    print(sum(numeros))\n",
+    "elif peticion == \"restar\":\n",
+    "    if len(numeros) >= 2:\n",
+    "        resultado = numeros[0] - sum(numeros[1:])\n",
+    "        print(resultado)\n",
+    "    else:\n",
+    "        print(\"Error: Se requieren al menos dos números para la resta.\")\n",
+    "elif peticion == \"multiplicar\":\n",
+    "    if len(numeros) >= 2:\n",
+    "        resultado = 1\n",
+    "        for elemento in numeros:\n",
+    "            resultado *= elemento\n",
+    "        print(resultado)\n",
+    "    else:\n",
+    "        print(\"Error: Se requieren al menos dos números para la multiplicación.\")\n",
+    "elif peticion == \"dividir\":\n",
+    "    if len(numeros) >= 2:\n",
+    "        cociente = numeros[0]\n",
+    "        for elemento in numeros[1:]:\n",
+    "            if elemento != 0:\n",
+    "                cociente /= elemento\n",
+    "            else:\n",
+    "                print(\"Error: No se puede dividir por cero.\")\n",
+    "                break\n",
+    "        else:\n",
+    "            print(cociente)\n",
+    "    else:\n",
+    "        print(\"Error: Se requieren al menos dos números para la división.\")\n",
+    "else: \n",
+    "     print(\"Disculpe, no le he entendido, ¿ha dicho que quiere sumar, restar, multiplicar o dividir?\")"
    ]
   },
   {
@@ -114,10 +208,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.02864257873245576\n"
+     ]
+    }
+   ],
+   "source": [
+    "peticion_volumen = float(input(\"¿Cuál es su volumen del préstamo hipotecario? \"))\n",
+    "peticion_interes_anual = float(input(\"¿Cuál es su tipo de interés anual? \"))\n",
+    "num_cuotas_anual = float(input(\"¿Cuál es su número de cuotas del préstamo en años? \"))\n",
+    "\n",
+    "    # Realizar el cálculo de la cuota\n",
+    "interes_mensual = peticion_interes_anual / 12 / 100\n",
+    "cuota_mensual = num_cuotas_anual * 12\n",
+    "cuota_a_pagar = peticion_volumen * (((1 + interes_mensual) ** cuota_mensual * (interes_mensual)) / ((1 + interes_mensual) ** cuota_mensual - 1))\n",
+    "\n",
+    "print(cuota_a_pagar)\n"
+   ]
   },
   {
    "attachments": {},
@@ -129,10 +242,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La cuota a pagar es: 0.0036961947268881433\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calcular_hip(volumen, interes_anual, años = 30):\n",
+    "   cuota_a_pagar = peticion_volumen * (((1 + interes_mensual) ** cuota_mes * (interes_mensual)) / ((1 + interes_mensual) ** cuota_mes - 1))\n",
+    "   return cuota_a_pagar\n",
+    "peticion_volumen = float(input(\"¿Cuál es su volumen del préstamo hipotecario? \"))\n",
+    "peticion_interes_anual = float(input(\"¿Cuál es su tipo de interés anual? \"))\n",
+    "interes_mensual = peticion_interes_anual / 12 / 100\n",
+    "cuota_mes = 30 * 12 \n",
+    " \n",
+    "\n",
+    "# Llamar a la función y mostrar el resultado\n",
+    "cuota_a_pagar = calcular_hip(peticion_volumen, interes_mensual, cuota_mes)\n",
+    "print(f\"La cuota a pagar es: {cuota_a_pagar}\")\n",
+    "    "
+   ]
   },
   {
    "attachments": {},
@@ -145,10 +280,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0036961947268881433\n"
+     ]
+    }
+   ],
+   "source": [
+    "res_cuota = calcular_hip(350000, 5, 20)\n",
+    "print(res_cuota)"
+   ]
   },
   {
    "attachments": {},
@@ -200,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,10 +366,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vuelta 1:bomberos - avioneta - barco\n",
+      "vuelta 2:avioneta - barco - bomberos\n",
+      "vuelta 3:barco - bomberos - avioneta\n",
+      "vuelta 4:bomberos - avioneta - barco\n",
+      "vuelta 5:avioneta - barco - bomberos\n"
+     ]
+    }
+   ],
+   "source": [
+    "def carrusel (cochecito, vueltas):\n",
+    "    vuelta = 1\n",
+    "    while vuelta <= vueltas:\n",
+    "        print(f\"vuelta {vuelta}:{' - '.join(coloca(cochecito))}\")\n",
+    "        vuelta += 1\n",
+    "coche = input(\"¿En qué cochecito te quieres montar? (¿barco, bomberos o avioneta?)\").lower()\n",
+    "num_vueltas = int(input(\"¿Qué numero de vueltas quieres dar?\"))\n",
+    "\n",
+    "carrusel(coche, num_vueltas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -255,6 +423,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Ejercicio Bonus 1\n",
+    "\n",
+    "def resolver_y (x):\n",
+    "    y = 4 * x + 2\n",
+    "    return y\n",
+    "pedir_x = float(input(\"Dé un valor para 'x'\"))\n",
+    "resolver_y(pedir_x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Ejercicio Bonus 2\n",
+    "\n",
+    "def devolver_y(x):\n",
+    "    y = 3 * x**2 + 4 * x + 2\n",
+    "    return y\n",
+    "propuesta_x = float(input(\"Dé un valor para 'x\"))\n",
+    "devolver_y(propuesta_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -277,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
