--- a/01_Programacion_basica_y_Ramp-Up/Simulacros Rampup/simulacro_viernes.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Simulacros Rampup/simulacro_viernes.ipynb
@@ -70,13 +70,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -144,10 +137,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['pop', 'pop', 'electrónica', 'pop']\n"
+     ]
+    }
+   ],
+   "source": [
+    "grupo_musical = [\"ABBA\", \"Madonna\", \"Kölsch\" ]\n",
+    "generos = [\"pop\", \"pop\", \"electrónica\"]\n",
+    "anios = [(1972,1982), 1983, 1995]\n",
+    "\n",
+    "\n",
+    "#a. Una función llamada *inserta* que acepte 4 parámetros (grupo, genero, comienzo, fin). \\ \n",
+    "# El fin por defecto debe ser un objeto nulo. El grupo se inserta en la lista de grupos. El \\ \n",
+    "# genero se inserta en la lista de géneros. El comienzo o comienzo y fin se inserta en la lista de años. \n",
+    "# La función no tiene valor retornado.\n",
+    "\n",
+    "def inserta(grupo, genero, comienzo, fin=None):\n",
+    "    grupo_musical.append(grupo)\n",
+    "    generos.append(genero)\n",
+    "\n",
+    "    if fin is not None:\n",
+    "        anios.append(comienzo,fin)\n",
+    "    else:\n",
+    "        anios.append(comienzo)\n",
+    "inserta(\"Lady Gaga\", \"pop\", 2008)\n",
+    "\n",
+    "print(generos)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#b. Una función *busca_genero* con un parámetro de tipo string (genero) y devuelve \n",
+    "# una lista con todos los grupos de ese género.\n",
+    "    \n",
+    "def busca_genero(genero):\n",
+    "    \n",
+    "\n",
+    "\n",
+    "genero_solicitado = input(\"¿Qué genero buscas?\").lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#c. Una función *busca_grupos* con un parámetro booleano llamado *activos* \n",
+    "# con un valor por defecto verdadero. Cuando el valor es verdadero, devuelve\n",
+    "#  solo los grupos activos en una lista. Cuando *activos* es falso, devuelve\n",
+    "#  todos los grupos disueltos en una lista.\n",
+    "\n",
+    "def busca_grupos (activos = True):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#d. Una función *busca_genero_indice* con un parámetro de tipo string (genero) \n",
+    "# que devuelve una lista con los índices donde se encuentra ese género.\n",
+    "\n",
+    "def busca_genero_indice (genero):\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#e. Una función *filtra_listas_genero* con un parámetro de tipo string (genero)\n",
+    "#  que devuelve una tupla con las 3 listas filtradas y ***llame*** a busca_genero_indice\n",
+    "\n",
+    "def filtra_listas_genero ( genero):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#f. Una función *anios_activos* que no tenga parámetros de entrada ni valor retornado\n",
+    "#  que imprima línea a línea la información: grupo musical ---> años activos.\n",
+    "\n",
+    "def anios_activos ():"
+   ]
   },
   {
    "attachments": {},
@@ -273,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
