--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Ejercicios_Workout/07_Ejercicios_Programación_Orientada_Objetos.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Ejercicios_Workout/07_Ejercicios_Programación_Orientada_Objetos.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,8 @@
       "Velocidad de parar: 0\n",
       "El perro es de la raza caniche, tiene el pelo de color Marrón\n",
       "Dueño: False\n",
-      "GUAU! ¡Qué bonito soy!\n"
+      "GUAU! ¡Qué bonito soy!\n",
+      "None\n"
      ]
     }
    ],
@@ -148,9 +149,29 @@
     "print(f\"El perro es de la raza {perrito.raza}, tiene el pelo de color {perrito.pelo}\")\n",
     "print(f\"Dueño: {perrito.dueño}\")\n",
     "print(ladrido)\n",
-    "    \n",
+    "\n",
+    "\n",
     "        \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Perro.__doc__)\n",
+    "print(Perro.__init__.__doc__)\n"
    ]
   },
   {
@@ -177,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
