--- a/01_Programacion_basica_y_Ramp-Up/Simulacros Rampup/simulacro_sabado.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Simulacros Rampup/simulacro_sabado.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -306,9 +306,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def gasto_vivienda (ingreso:float, lista_hip:list):\n",
+    "    cuota = calculadora_hip(lista_hip[0],lista_hip[1],lista_hip[2])\n",
+    "    return float(cuota / ingreso)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -317,6 +326,15 @@
    "metadata": {},
    "source": [
     "5. Calcula el porcentaje de gasto en la hipoteca si el ingreso es de 1700 euros y guárdalo en la variable `res_porcentaje` a partir de la función `gasto_vivienda`. (0.4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_porcentaje = gasto_vivienda(1700, [])"
    ]
   },
   {
