--- a/01_Programacion_basica_y_Ramp-Up/Simulacros Rampup/simulacro_viernes.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Simulacros Rampup/simulacro_viernes.ipynb
@@ -175,17 +175,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (3162906741.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[6], line 7\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f\"Los grupos del género\" {gnero_solicitado}, son {grupos_del_mismo_genero})\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     ]
+    }
+   ],
    "source": [
     "#b. Una función *busca_genero* con un parámetro de tipo string (genero) y devuelve \n",
     "# una lista con todos los grupos de ese género.\n",
     "    \n",
     "def busca_genero(genero):\n",
-    "    \n",
+    "    if genero_solicitado in generos:\n",
+    "        grupos_del_mismo_genero = [grupo for grupo in musica]\n",
+    "        print(f\"Los grupos del género\" {gnero_solicitado}, son {grupos_del_mismo_genero})\n",
     "\n",
-    "\n",
+    "musica = zip(grupo_musical, generos, anios)\n",
+    "lista_total = list(musica)\n",
     "genero_solicitado = input(\"¿Qué genero buscas?\").lower()"
    ]
   },
