--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Practica_Obligatoria/08_Practica_Obligatoria_OOP.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Practica_Obligatoria/08_Practica_Obligatoria_OOP.ipynb
@@ -119,14 +119,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Usuario:\n",
-    "    def __init__(self, nombre, saldo):\n",
+    "    def __init__(self, nombre, saldo, checking_account):\n",
     "        self.nombre = nombre\n",
     "        self.saldo = saldo\n",
+    "        self.checking_account = checking_account\n",
     "    def withdraw(self, dinero_a_retirar):\n",
     "        dinero_a_retirar = int(input(\"¿Cuánto dinero desea retirar)\"))\n",
     "        if dinero_a_retirar > self.saldo:\n",
@@ -134,54 +135,79 @@
     "        self.saldo -= dinero_a_retirar\n",
     "        print(f\"El saldo restante de {self.nombre} es de {self.saldo}.\")\n",
     "    \n",
-    "    def add_cash (self, saldo):\n",
-    "        ingreso = int(input(\"¿Cuánto dinero quieres ingresar?\"))\n",
-    "        self.saldo += ingreso\n",
+    "    def add_cash (self, dinero_a_ingresar):\n",
+    "        dinero_a_ingresar = int(input(\"¿Cuánto dinero quieres ingresar?\"))\n",
+    "        self.saldo += dinero_a_ingresar\n",
     "        print(f\"Tras el ingreso, el saldo de {self.nombre} es de {self.saldo}.\")\n",
     "\n",
-    "    #No entiendo muy bien este apartado del método check. Entiendo que tengo que comparar los atributos de dos usuarios\n",
-    "    def check (self, nombre, saldo):\n",
-    "        self.saldo += ingreso\n",
+    "    def check (self, otro_usuario, dinero):\n",
+    "       if otro_usuario.saldo < dinero:\n",
+    "            raise ValueError(f\"{otro_usuario.nombre} no tiene suficiente dinero.\")\n",
+    "       if not otro_usuario.checking_account:\n",
+    "            raise ValueError(f\"{otro_usuario.nombre} no tiene cuenta de cheques activa.\")\n",
+    "\n",
+    "       self.saldo += dinero\n",
+    "       otro_usuario.saldo -= dinero\n",
+    "       print(f\"{self.nombre} tiene {self.saldo} y {otro_usuario.nombre} tiene {otro_usuario.saldo} \")\n",
     "\n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El saldo restante de Pepito es de 80.\n",
+      "El saldo restante de Pepito es de 60.\n",
       "None\n"
      ]
     }
    ],
    "source": [
-    "cliente_1 = Usuario(nombre = \"Pepito\", saldo = 100)\n",
-    "print(cliente_1.withdraw(20))\n"
+    "cliente_1 = Usuario(nombre = \"Pepito\", saldo = 100, checking_account = False)\n",
+    "print(cliente_1.withdraw(40))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tras el ingreso, el saldo de Lolita es de 1700.\n",
+      "Tras el ingreso, el saldo de Lolita es de 1210.\n",
       "None\n"
      ]
     }
    ],
    "source": [
-    "cliente_2 = Usuario(nombre = \"Lolita\", saldo = 1200)\n",
-    "print(cliente_2.add_cash(500))"
+    "cliente_2 = Usuario(nombre = \"Lolita\", saldo = 1200, checking_account = False)\n",
+    "print(cliente_2.add_cash(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manuel tiene 1000 y Manuel tiene 1000 \n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "comparacion = Usuario(nombre = \"Manuel\", saldo = 1000, checking_account=True)\n",
+    "print(comparacion.check(comparacion, 100))"
    ]
   },
   {
