--- a/01_Programacion_basica_y_Ramp-Up/Simulacros Rampup/simulacro_viernes.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Simulacros Rampup/simulacro_viernes.ipynb
@@ -137,13 +137,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "El diccionario inicial es {'ABBA': ('pop', (1972, 1982)), 'Madonna': ('pop', 1983), 'Kölsch': ('electrónica', 1995)}\n",
+      "El diccionario ahora con un añadido es ('pop', 2008)\n",
       "['pop', 'pop', 'electrónica', 'pop']\n"
      ]
     }
@@ -152,6 +154,13 @@
     "grupo_musical = [\"ABBA\", \"Madonna\", \"Kölsch\" ]\n",
     "generos = [\"pop\", \"pop\", \"electrónica\"]\n",
     "anios = [(1972,1982), 1983, 1995]\n",
+    "musica = dict(zip(grupo_musical, zip(generos, anios)))\n",
+    "print(f\"El diccionario inicial es {musica}\")\n",
+    "\n",
+    "new_artist = [\"Lady Gaga\", \"pop\", 2008]\n",
+    "new_musica = musica[new_artist[0]] = (new_artist[1], new_artist[2])\n",
+    "\n",
+    "print(f\"El diccionario ahora con un añadido es {new_musica}\")\n",
     "\n",
     "\n",
     "#a. Una función llamada *inserta* que acepte 4 parámetros (grupo, genero, comienzo, fin). \\ \n",
@@ -175,26 +184,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (3162906741.py, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[6], line 7\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f\"Los grupos del género\" {gnero_solicitado}, son {grupos_del_mismo_genero})\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#b. Una función *busca_genero* con un parámetro de tipo string (genero) y devuelve \n",
     "# una lista con todos los grupos de ese género.\n",
     "    \n",
     "def busca_genero(genero):\n",
+    "    encontrado = False\n",
+    "    \n",
     "    if genero_solicitado in generos:\n",
-    "        grupos_del_mismo_genero = [grupo for grupo in musica]\n",
-    "        print(f\"Los grupos del género\" {gnero_solicitado}, son {grupos_del_mismo_genero})\n",
+    "        grupos_del_mismo_genero = [grupo for grupo_musical in musica]\n",
+    "    print(f\"Los grupos del género {genero_solicitado}, son {grupos_del_mismo_genero}\")\n",
     "\n",
     "musica = zip(grupo_musical, generos, anios)\n",
     "lista_total = list(musica)\n",
