--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Practica_Obligatoria/13_Colecciones_Funciones_Practica_Obligatoria.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Practica_Obligatoria/13_Colecciones_Funciones_Practica_Obligatoria.ipynb
@@ -79,6 +79,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Forma propuesta por HEgoi en el review:\n",
+    "\n",
+    "ejer_2 = [1,2,3,4,5]\n",
+    "ejer_2_out = []\n",
+    "for e in ejer_2:\n",
+    "    ejer_2_out.append(e **2)\n",
+    "print(ejer_2_out)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -93,16 +116,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Los duplicados de 'un': ocupan las posiciones [0, 7]\n",
-      "Los duplicados de 'es': ocupan las posiciones [3, 13]\n",
-      "Los duplicados de 'binario': ocupan las posiciones [2, 15]\n"
+      "Los duplicados de 'un': ocupan las posiciones [0, 7], y el número de repeticiones es 2\n",
+      "Los duplicados de 'es': ocupan las posiciones [3, 13], y el número de repeticiones es 2\n",
+      "Los duplicados de 'binario': ocupan las posiciones [2, 15], y el número de repeticiones es 2\n"
      ]
     }
    ],
@@ -125,7 +148,7 @@
     "# Buscar duplicados e imprimir resultados\n",
     "for elemento in elementos_a_buscar:\n",
     "    indices_duplicados = encontrar_duplicados_indices_insensible(ejer_3, elemento)\n",
-    "    print(f\"Los duplicados de '{elemento}': ocupan las posiciones {indices_duplicados}\")\n"
+    "    print(f\"Los duplicados de '{elemento}': ocupan las posiciones {indices_duplicados}, y el número de repeticiones es {len(indices_duplicados)}\")\n"
    ]
   },
   {
@@ -206,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -215,11 +238,37 @@
      "text": [
       "[3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7]\n",
       "{2, 3, 67, 5, 4, 7, 6, 9, 45, 78, 47, 19, 20, 90, 29}\n",
-      "{0: 3, 1: 20, 2: 3, 3: 47, 4: 19, 5: 3, 6: 29, 7: 45, 8: 67, 9: 78, 10: 90, 11: 3, 12: 3, 13: 5, 14: 2, 15: 4, 16: 7, 17: 9, 18: 4, 19: 2, 20: 4, 21: 3, 22: 3, 23: 4, 24: 6, 25: 7}\n"
+      "{0: 3,\n",
+      " 1: 20,\n",
+      " 2: 3,\n",
+      " 3: 47,\n",
+      " 4: 19,\n",
+      " 5: 3,\n",
+      " 6: 29,\n",
+      " 7: 45,\n",
+      " 8: 67,\n",
+      " 9: 78,\n",
+      " 10: 90,\n",
+      " 11: 3,\n",
+      " 12: 3,\n",
+      " 13: 5,\n",
+      " 14: 2,\n",
+      " 15: 4,\n",
+      " 16: 7,\n",
+      " 17: 9,\n",
+      " 18: 4,\n",
+      " 19: 2,\n",
+      " 20: 4,\n",
+      " 21: 3,\n",
+      " 22: 3,\n",
+      " 23: 4,\n",
+      " 24: 6,\n",
+      " 25: 7}\n"
      ]
     }
    ],
    "source": [
+    "import pprint #Para después imprimir el diccionario y que se vea escrito hacia abajo y no en línea larga\n",
     "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
     "\n",
     "#Convertir tupla en lista\n",
@@ -234,7 +283,7 @@
     "#Convertir tupla en diccionario usando índices\n",
     "\n",
     "diccionario = {indice: valor for indice, valor in enumerate(ejer_9)}\n",
-    "print(diccionario)"
+    "pprint.pprint(diccionario)"
    ]
   },
   {
@@ -292,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -300,11 +349,31 @@
      "output_type": "stream",
      "text": [
       "[{'titulo': 'El Código Da Vinci', 'autor': 'Dan Brown', 'idioma original': 'inglés', 'año de publicación': 2003}]\n",
-      "[{'titulo': 'El Código Da Vinci', 'autor': 'Dan Brown', 'idioma original': 'inglés', 'año de publicación': 2003}, {'titulo': 'Don Quijote de La Mancha', 'autor': 'Miguel de Cervantes', 'idioma original': 'castellano', 'año de publicación': 1605}, {'titulo': 'La Celestina', 'autor': 'Fernando de Rojas', 'idioma original': 'castellano', 'año de publicación': 1499}, {'titulo': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'idioma original': 'castellano', 'año de publicación': 1967}, {'titulo': 'Cantares gallegos', 'autor': 'Rosalía de Castro', 'idioma original': 'gallego', 'año de publicación': 1863}]\n"
+      "[{'autor': 'Dan Brown',\n",
+      "  'año de publicación': 2003,\n",
+      "  'idioma original': 'inglés',\n",
+      "  'titulo': 'El Código Da Vinci'},\n",
+      " {'autor': 'Miguel de Cervantes',\n",
+      "  'año de publicación': 1605,\n",
+      "  'idioma original': 'castellano',\n",
+      "  'titulo': 'Don Quijote de La Mancha'},\n",
+      " {'autor': 'Fernando de Rojas',\n",
+      "  'año de publicación': 1499,\n",
+      "  'idioma original': 'castellano',\n",
+      "  'titulo': 'La Celestina'},\n",
+      " {'autor': 'Gabriel García Márquez',\n",
+      "  'año de publicación': 1967,\n",
+      "  'idioma original': 'castellano',\n",
+      "  'titulo': 'Cien años de soledad'},\n",
+      " {'autor': 'Rosalía de Castro',\n",
+      "  'año de publicación': 1863,\n",
+      "  'idioma original': 'gallego',\n",
+      "  'titulo': 'Cantares gallegos'}]\n"
      ]
     }
    ],
    "source": [
+    "import pprint\n",
     "#O tal vez se refería a esto:\n",
     "diccionario_libreria = {\n",
     "    \"titulo\": \"El Código Da Vinci\",\n",
@@ -346,7 +415,7 @@
     "libreria.append(libro_3)\n",
     "libreria.append(libro_4)\n",
     "\n",
-    "print(libreria)"
+    "pprint.pprint(libreria)"
    ]
   },
   {
@@ -391,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -465,14 +534,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "([{'titulo': 'El Código Da Vinci', 'autor': 'Dan Brown', 'idioma original': 'inglés', 'año de publicación': 2003}, {'titulo': 'Don Quijote de La Mancha', 'autor': 'Miguel de Cervantes', 'idioma original': 'castellano', 'año de publicación': 1605}, {'titulo': 'La Celestina', 'autor': 'Fernando de Rojas', 'idioma original': 'castellano', 'año de publicación': 1499}, {'titulo': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'idioma original': 'castellano', 'año de publicación': 1967}, {'titulo': 'Cantares gallegos', 'autor': 'Rosalía de Castro', 'idioma original': 'gallego', 'año de publicación': 1863}], 'El Código Da Vinci')\n"
+      "([{'autor': 'Dan Brown',\n",
+      "   'año de publicación': 2003,\n",
+      "   'idioma original': 'inglés',\n",
+      "   'titulo': 'El Código Da Vinci'},\n",
+      "  {'autor': 'Miguel de Cervantes',\n",
+      "   'año de publicación': 1605,\n",
+      "   'idioma original': 'castellano',\n",
+      "   'titulo': 'Don Quijote de La Mancha'},\n",
+      "  {'autor': 'Fernando de Rojas',\n",
+      "   'año de publicación': 1499,\n",
+      "   'idioma original': 'castellano',\n",
+      "   'titulo': 'La Celestina'},\n",
+      "  {'autor': 'Gabriel García Márquez',\n",
+      "   'año de publicación': 1967,\n",
+      "   'idioma original': 'castellano',\n",
+      "   'titulo': 'Cien años de soledad'},\n",
+      "  {'autor': 'Rosalía de Castro',\n",
+      "   'año de publicación': 1863,\n",
+      "   'idioma original': 'gallego',\n",
+      "   'titulo': 'Cantares gallegos'}],\n",
+      " 'El Código Da Vinci')\n"
      ]
     }
    ],
@@ -485,17 +574,25 @@
     "\n",
     "for prestamo in libreria:\n",
     "    if prestamo[\"titulo\"].lower() == peticion.lower():\n",
+    "        print(\"Encontrado\")\n",
     "        encontrado = True\n",
     "        print(\"El libro está en nuestra librería\")\n",
     "\n",
     "libreria = [{'titulo': 'El Código Da Vinci', 'autor': 'Dan Brown', 'idioma original': 'inglés', 'año de publicación': 2003}, {'titulo': 'Don Quijote de La Mancha', 'autor': 'Miguel de Cervantes', 'idioma original': 'castellano', 'año de publicación': 1605}, {'titulo': 'La Celestina', 'autor': 'Fernando de Rojas', 'idioma original': 'castellano', 'año de publicación': 1499}, {'titulo': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'idioma original': 'castellano', 'año de publicación': 1967}, {'titulo': 'Cantares gallegos', 'autor': 'Rosalía de Castro', 'idioma original': 'gallego', 'año de publicación': 1863}]\n",
     "resultado = (libreria,\"El Código Da Vinci\")\n",
-    "print(resultado)\n"
+    "pprint.pprint(resultado)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -552,6 +649,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Forma de Hegoi en el review\n",
+    "\n",
+    "def email_valido(email):\n",
+    "    return \"@\" in email  #Se puede buscar directamente si hay un str en una cadena de texto, si hay un elemento en un str. Devuelve True or False\n",
+    "email= input(\"Dame tu correo\")\n",
+    "\n",
+    "print(email_valido(email))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -568,16 +688,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Número de DNI NOOOO aceptado'"
+       "'Número de DNI ACEPTADO'"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,11 +713,18 @@
     "        return \"Número de DNI ACEPTADO\"\n",
     "\n",
     "dni_propuesto = int(input(\"Escribe los números de tu DNI\"))\n",
-    "letra_propuesta = input(\"Escribe la letra de tu DNI\")\n",
+    "letra_propuesta = input(\"Escribe la letra de tu DNI\").upper()\n",
     "validez_dni(dni_propuesto,letra_propuesta)\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
