--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Practica_Obligatoria/08_Practica_Obligatoria_OOP.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Practica_Obligatoria/08_Practica_Obligatoria_OOP.ipynb
@@ -133,12 +133,12 @@
     "        if dinero_a_retirar > self.saldo:\n",
     "            raise ValueError(\"Ya quisieras tú sacar ese dinero, pero no puedes porque no lo tienes.\")\n",
     "        self.saldo -= dinero_a_retirar\n",
-    "        print(f\"El saldo restante de {self.nombre} es de {self.saldo}.\")\n",
+    "        return f\"El saldo restante de {self.nombre} es de {self.saldo}.\"\n",
     "    \n",
     "    def add_cash (self, dinero_a_ingresar):\n",
     "        dinero_a_ingresar = int(input(\"¿Cuánto dinero quieres ingresar?\"))\n",
     "        self.saldo += dinero_a_ingresar\n",
-    "        print(f\"Tras el ingreso, el saldo de {self.nombre} es de {self.saldo}.\")\n",
+    "        return f\"Tras el ingreso, el saldo de {self.nombre} es de {self.saldo}.\"\n",
     "\n",
     "    def check (self, otro_usuario, dinero):\n",
     "       if otro_usuario.saldo < dinero:\n",
@@ -150,8 +150,16 @@
     "       otro_usuario.saldo -= dinero\n",
     "       print(f\"{self.nombre} tiene {self.saldo} y {otro_usuario.nombre} tiene {otro_usuario.saldo} \")\n",
     "\n",
+    "    def print_info(self):\n",
     "        \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -208,6 +216,127 @@
    "source": [
     "comparacion = Usuario(nombre = \"Manuel\", saldo = 1000, checking_account=True)\n",
     "print(comparacion.check(comparacion, 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Usuario:\n",
+    "    def __init__(self, nombre, saldo, checking_account):\n",
+    "        self.nombre = nombre\n",
+    "        self.saldo = saldo\n",
+    "        self.checking_account = checking_account\n",
+    "\n",
+    "    def print_info (self):\n",
+    "        print(f\"El nombre es {self.nombre}, el saldo es {self.saldo} y checking_account es {self.checking_account}\")\n",
+    "    \n",
+    "    def withdraw(self, dinero_a_retirar):\n",
+    "        if dinero_a_retirar > self.saldo:\n",
+    "            raise ValueError(\"Ya quisieras tú sacar ese dinero, pero no puedes porque no lo tienes.\")\n",
+    "        self.saldo -= dinero_a_retirar\n",
+    "        return f\"El saldo restante de {self.nombre} es de {self.saldo}.\"\n",
+    "   \n",
+    "    def add_cash (self, dinero_a_agregar):\n",
+    "        self.saldo += dinero_a_agregar\n",
+    "        return f\"El saldo restante de {self.nombre} es de {self.saldo}.\"\n",
+    "    \n",
+    "    def check(self, other_user, cantidad):\n",
+    "        if not other_user.checking_account:    #Es lo mismo que if other_user.checking_account = False\n",
+    "            raise ValueError(\"Cuenta no habilitada para transferencias\")\n",
+    "        if other_user.saldo < cantidad:\n",
+    "            raise ValueError(\"No hay fondos para hacer transferencia\")\n",
+    "        self.saldo += cantidad\n",
+    "        other_user.saldo -= cantidad\n",
+    "        return f\"{self.nombre} tiene {self.saldo} € y {other_user.nombre} tiene {other_user.saldo}\"\n",
+    "    \n",
+    "    #En el review hemos visto como reutilizar las funciones dentro de otra función.\n",
+    "\n",
+    "    def check_alt(self, other_user, cantidad):\n",
+    "        if not other_user.checking_account:    #Es lo mismo que if other_user.checking_account = False\n",
+    "            raise ValueError(\"Cuenta no habilitada para transferencias\")\n",
+    "        mensaje2 =  other_user.withdraw(cantidad)\n",
+    "        mensaje1 =  self.add_cash(cantidad)\n",
+    "        return f\"{mensaje1[:-1] y {mensaje2}}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El nombre es Anna, el saldo es 10000000000000 y checking_account es True\n",
+      "El saldo restante de Anna es de 9999999999995.\n",
+      "El saldo restante de Anna es de 10000000000095.\n",
+      "Juancho tiene 101000 € y Anna tiene 9999999900095\n",
+      "Anna tiene 9999999900096 € y Juancho tiene 100999\n"
+     ]
+    }
+   ],
+   "source": [
+    "Anna = Usuario(\"Anna\", 10000000000000, True)\n",
+    "Anna.print_info()\n",
+    "print(Anna.withdraw(5))\n",
+    "print(Anna.add_cash(100))\n",
+    "\n",
+    "Juancho = Usuario(\"Juancho\",1000, False)\n",
+    "print(Juancho.check(Anna, 100000))\n",
+    "Juancho.checking_account = True\n",
+    "print(Anna.check(Juancho,1))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# pero si se cambia el atributo de checking_account de Juancho a True ya se podrá:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El saldo restante de Jeff es de 68.\n",
+      "Joe tiene 120 € y Jeff tiene 18\n",
+      "Cuenta no habilitada para transferencias\n",
+      "Jeff tiene 98 € y Joe tiene 40\n",
+      "No hay fondos para hacer transferencia\n",
+      "El saldo restante de Jeff es de 118.0.\n"
+     ]
+    }
+   ],
+   "source": [
+    "Jeff = Usuario('Jeff', 70, True)\n",
+    "Joe = Usuario('Joe', 70, False)\n",
+    "\n",
+    "print(Jeff.withdraw(2)) # Devuelve 'Jeff tiene 68.'\n",
+    "\n",
+    "print(Joe.check(Jeff, 50)) # Devuelve 'Joe tiene 120 y Jeff tiene 18.'\n",
+    "\n",
+    "try:\n",
+    "    print(Jeff.check(Joe, 80)) # Lanza un ValueError\n",
+    "\n",
+    "except ValueError as message:\n",
+    "    print(message)\n",
+    "\n",
+    "Joe.checking_account = True # Habilita la cuenta corriente para Joe\n",
+    "\n",
+    "print(Jeff.check(Joe, 80)) # Devuelve 'Jeff tiene 98 y Joe tiene 40'\n",
+    "\n",
+    "try:\n",
+    "    print(Joe.check(Jeff, 100)) # Lanza un ValueError\n",
+    "\n",
+    "except ValueError as message:\n",
+    "    print(message)\n",
+    "print(Jeff.add_cash(20.00)) # Devuelve 'Jeff tiene 118.'"
    ]
   },
   {
